[package]
name = "uniswap_v3_math"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "Uniswap V3 math in Rust"
readme = "README.md"
homepage = "https://github.com/0xKitsune/uniswap_v3_math"
repository = "https://github.com/0xKitsune/uniswap_v3_math"
keywords = ["uniswapV3", "math"]
exclude = ["target/*", ".github/*", ".gitignore", "Uniswap/*"]

[dependencies]
alloy = { version="0.1", features = ["contract","providers"]  }

eyre = "0.6.12"
thiserror = "1.0.61"
