[package]
name = "uniswap_v3_math"
rust-version = "1.82"
version = "0.5.3"
edition = "2021"
license = "MIT"
description = "Uniswap V3 math in Rust"
readme = "README.md"
homepage = "https://github.com/0xKitsune/uniswap_v3_math"
repository = "https://github.com/0xKitsune/uniswap_v3_math"
keywords = ["uniswapV3", "math"]
exclude = ["target/*", ".github/*", ".gitignore", "Uniswap/*"]

[dependencies]
alloy = { version = "0.9", features = ["contract", "providers"] }
eyre = "0.6"
thiserror = "2.0"
